create components and style them

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,101 @@
-.App {
+h3 {
+  border-bottom: 1px solid #3f3f3f41;
+}
+
+.app {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+  background-color: #e5e7e941;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.container {
+  width: 40vw;
+  min-width: 200px;
+  border-radius: 0.3rem;
+}
+
+.income-container {
+  display: flex;
+  justify-content: space-between;
+  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.2);
+  margin: 0 auto;
+  border-radius: 0.3rem;
+}
+
+.money {
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+.money-in {
+  color: forestgreen;
+}
+.money-out {
+  color: crimson;
+}
+.income {
+  flex: 1;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.expense {
+  border-left: 1px solid rgba(0, 0, 0, 0.2);
+  flex: 1;
+  text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+ul {
+  padding: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+li {
+  list-style: none;
+  width: 100%;
   display: flex;
-  flex-direction: column;
   align-items: center;
+  margin: 5px 0;
+  justify-content: space-between;
+  padding: 5px;
+}
+
+.in {
+  color: forestgreen;
+  border-left: 3px solid forestgreen;
+}
+
+.out {
+  border-left: 3px solid crimson;
+  color: crimson;
+}
+
+.form-control {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column;
+  margin-bottom: 10%;
 }
 
-.App-link {
-  color: #61dafb;
+.label {
+  font-weight: 400;
+  margin-bottom: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input {
+  height: 30px;
+  padding-left: 5px;
+}
+
+.transaction-btn {
+  width: 100%;
+  height: 50px;
+  text-align: center;
+  background-color: rgb(0, 189, 95);
+  color: #ffff;
+  font-size: 1.2em;
+  border: none;
+  border-radius: 0.3rem;
 }
